Corrigido caminhos e links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="about" class="section scroll-reveal">
       <h2 class="scroll-reveal">About Me</h2>
       <div class="profile-pic scroll-reveal">
-        <img src="../images/Design sem nome (3).png" alt="Alice Cruz">
+        <img src="images/Design sem nome (3).png" alt="Alice Cruz">
       </div>
       <p class="scroll-reveal">
         Hello! My name is Alice, I am a Data Science professional with a great passion for Artificial Intelligence. 
@@ -45,23 +45,23 @@
     <h2 class="scroll-reveal">Projects</h2>
     <ul class="project-list scroll-reveal">
         <li>
-            <img src="..\images\project1.jpeg" alt="Project 1">
+            <img src="images/project1.jpeg" alt="Project 1">
             <a href="project1.html" class="project-name">Project 1</a>
         </li>
         <li>
-            <img src="..\images\project2.jpeg" alt="Project 2">
+            <img src="images/project2.jpeg" alt="Project 2">
             <a href="project2.html" class="project-name">Project 2</a>
         </li>
         <li>
-            <img src="..\images\project3.jpeg" alt="Project 3">
+            <img src="images/project3.jpeg" alt="Project 3">
             <a href="project3.html" class="project-name">Project 3</a>
         </li>
         <li>
-            <img src="..\images\project4.jpeg" alt="Project 4">
+            <img src="images/project4.jpeg" alt="Project 4">
             <a href="project4.html" class="project-name">Project 4</a>
         </li>
     </ul>
-    <a href="\projects\indexp.html" class="more-projects scroll-reveal">More Projects</a>
+    <a href="projects/indexp.html" class="more-projects scroll-reveal">More Projects</a>
   </section>
 
   <!-- Seção de Contato -->
