--- a/projects/indexp.html
+++ b/projects/indexp.html
@@ -15,7 +15,7 @@
         <div class="cabeçalho">
             <nav class="navbar">
                 <div class="left">
-                    <a href="../index.html">Back to the Home</a>
+                    <a href="/">Back to the Home</a>
                     <!-- Se quiser colocar links para outras páginas, adicione aqui -->
                 </div>
             </nav>
@@ -34,7 +34,7 @@
                 <a href="projects/project2.html" class="project-name">La Guardian LDA</a>
             </li>
             <li>
-                <img src="project-img\choco.png">
+                <img src="project-img/choco.png">
                 <a href="projects/project3.html" class="project-name">Chocolate Statistics</a>
             </li>
             <!-- Adicione mais projetos aqui -->
