--- a/projects/indexp.html
+++ b/projects/indexp.html
@@ -15,7 +15,7 @@
         <div class="cabeçalho">
             <nav class="navbar">
                 <div class="left">
-                    <a href="/">Back to the Home</a>
+                    <a href="index.html">Back to the Home</a>
                     <!-- Se quiser colocar links para outras páginas, adicione aqui -->
                 </div>
             </nav>
